assets/css/style.css
* {
    margin:   0;
    padding:  0;
    width: 100%;
}

.container {
    box-sizing: border-box;
}

.mainContainer{
    display:     column;
    flex-direction: row;
    text-align:  center;
}

.subContainer{
    display:                  flex;
    flex-direction:            row;
    justify-content: space-between;
    margin:                    5px;
    text-align:             center;
}
.has-background-info{
    border-radius: 5px;
}

/* list style */

.name{
    font-weight:        bold;
    margin-bottom:      10px;
    justify-content: inherit;
    height:             45px;
}
.name:first-child{
    margin-top:            0;
}

.date{
    font-style:       italic;
    margin-bottom:      10px;
    margin-top:         10px;
    justify-content: inherit;
    height:             45px;
}
.date:first-child{
    margin-top:            0;
}


.genre{
    margin-bottom:      10px;
    margin-top:         10px;
    justify-content: inherit;
    height:             45px;
}
.genre:first-child{
    margin-top:            0;
}

